# Falcon-TST

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_eval.py  setup.py
datasets/: __init__.py  benchmark_dataset.py
docs/: Makefile  conf.py  index.rst
eval/: __init__.py  evaluation.py  metrics.py
falcon1/: README.md
falcon1/eval/: evaluation.py
falcon1/models/: __init__.py
falcon_tst/: __init__.py
falcon_tst/models/: __init__.py  configuration_falcon_tst.py  modeling_falcon_tst.py  ts_generation_mixin.py
falconx/: README.md
falconx/eval/: falcon-x.ipynb
falconx/src/falcontst/: __init__.py  client.py
patchmoe/: __init__.py
patchmoe/models/: __init__.py  configuration_patch_moe.py  modeling_patch_moe.py  ts_generation_mixin.py
results/: total_res.csv
